--- a/configs/szqzj_x86_64_bios_defconfig
+++ b/configs/szqzj_x86_64_bios_defconfig
@@ -14,6 +14,9 @@ BR2_TARGET_GENERIC_GETTY_PORT="tty1"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 # 启用 NLS 支持
 BR2_SYSTEM_ENABLE_NLS=y
+# 安装 timezone 文件
+BR2_TARGET_TZ_INFO=y
+BR2_TARGET_LOCALTIME="Hongkong"
 
 # 用于创建可启动的镜像
 BR2_PACKAGE_HOST_GENIMAGE=y
