--- a/configs/szqzj_x86_64_bios_defconfig
+++ b/configs/szqzj_x86_64_bios_defconfig
@@ -20,6 +20,9 @@ BR2_TARGET_LOCALTIME="Hongkong"
 # 合并系统文件到 /usr
 BR2_ROOTFS_MERGED_USR=y
 
+
+
+
 # 用于创建可启动的镜像
 BR2_PACKAGE_HOST_GENIMAGE=y
 
@@ -69,6 +72,9 @@ BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX=y
 
 # 软件包
 #
+# 启用和busybox重复的功能
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+
 # 使用 connman 是因为它设置网络很简单.
 # acpid 用作电源按键支持
 BR2_PACKAGE_ACPID=y
