--- a/configs/szqzj_x86_64_bios_defconfig
+++ b/configs/szqzj_x86_64_bios_defconfig
@@ -12,6 +12,8 @@ BR2_CCACHE_DIR="$(TOPDIR)/dl/.buildroot-ccache"
 # 系统
 BR2_TARGET_GENERIC_GETTY_PORT="tty1"
 BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
+# 默认使用 GNU Bash 作为 Shell
+BR2_SYSTEM_BIN_SH_BASH=y
 # 启用 NLS 支持
 BR2_SYSTEM_ENABLE_NLS=y
 # 安装 timezone 文件
