configs/szqzj_x86_64_bios_defconfig: 切换单独的 board 目录

--- a/configs/szqzj_x86_64_bios_defconfig
+++ b/configs/szqzj_x86_64_bios_defconfig
@@ -39,9 +39,9 @@ BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
 BR2_TARGET_ROOTFS_EXT2_SIZE="120M"
 # BR2_TARGET_ROOTFS_TAR is not set
-BR2_ROOTFS_POST_BUILD_SCRIPT="board/pc/post-build.sh"
+BR2_ROOTFS_POST_BUILD_SCRIPT="board/szqzj/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="-c board/pc/genimage-bios.cfg"
+BR2_ROOTFS_POST_SCRIPT_ARGS="-c board/szqzj/genimage-bios.cfg"
 
 # Linux 内核头文件应该和使用的内核相同
 BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_5_10=y
@@ -51,7 +51,7 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="5.10.41"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/pc/linux.config"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/szqzj/linux.config"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 
